# dash-app-playground

./: README.md  app.py  data.parquet  pyproject.toml
