[tool.poetry]
name = "dash-app-interactive"
version = "0.1.0"
description = "App to test out dash and all the items related to this library"
authors = ["Brandon George <geobrandon96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"
pandas = "^2.2.3"
dash-cytoscape = "^1.0.2"
duckdb = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
