[tool.poetry]
name = "dash-app-interactive"
version = "0.1.0"
description = "App to test out dash and all the items related to this library"
authors = ["Brandon George <geobrandon96@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"
pandas = "^2.2.3"
duckdb = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
